data/derived/comb/progs/unify/prog3550.ml.out
Characters 60-73:
  else [n mod 10] @ digitsOfInt n/10;;
                    ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
